@@ -31,6 +31,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix tracing empty sc module (#2729).
 
+****  Fix generate for unrolling to be signed (#2730). [yanx21]
+
 
 * Verilator 4.106 2020-12-02
 
